# krillnotes

./: .gitignore  CHANGELOG.md  CHECKPOINT.md  Cargo.toml  DEVELOPER.md  IMPLEMENTATION_CHECKPOINT.md  KRILLNOTES_SCRIPTING.md  LICENSE  README.md  SCRIPTING.md  TODO.md  ideas.md
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml  release.yml
docs/: use-cases.md
docs/plans/: 2026-02-17-mvp-foundation-design.md  2026-02-17-mvp-implementation.md  2026-02-17-tauri-migration-design.md  2026-02-17-tauri-migration.md  2026-02-18-detail-view-editing-design.md  2026-02-18-detail-view-editing.md  2026-02-18-tree-view-design.md  2026-02-18-tree-view.md  2026-02-18-workspace-integration-design.md  2026-02-18-workspace-integration.md  2026-02-19-branding.md  2026-02-19-contact-schema-design.md  2026-02-19-contact-schema.md  2026-02-19-context-menu-design.md  2026-02-19-context-menu.md  2026-02-19-rhai-hooks-design.md  2026-02-19-rhai-hooks.md  2026-02-19-rust-guidelines-compliance-design.md  2026-02-19-rust-guidelines-compliance.md  2026-02-20-auto-select-edit-on-create-design.md  2026-02-20-auto-select-edit-on-create.md  2026-02-20-boolean-field-display-design.md  2026-02-20-boolean-field-ui.md  2026-02-20-collapsible-metadata-design.md  2026-02-20-collapsible-metadata.md  2026-02-20-compressed-field-view-design.md  2026-02-20-compressed-field-view.md  2026-02-20-field-title-visibility-flags-design.md  2026-02-20-field-title-visibility-flags.md  2026-02-20-scripting-refactor-design.md  2026-02-20-scripting-refactor.md  2026-02-20-tree-keyboard-navigation-design.md  2026-02-20-tree-keyboard-navigation.md  2026-02-21-children-sort-design.md  2026-02-21-children-sort.md  2026-02-21-code-quality-pass.md  2026-02-21-operations-log-view-design.md  2026-02-21-operations-log-view.md  2026-02-21-search-bar-design.md  2026-02-21-search-bar.md  (+126 more)
docs/superpowers/plans/: 2026-03-11-peer-contact-manager-phase-b.md  2026-03-13-delta-generation.md  2026-03-14-frontend-cleanup-phase-a.md  2026-03-15-folder-sync-addressing.md  2026-03-15-relay-account-identity-management.md  2026-03-30-multi-device-sync-fixes.md  2026-04-07-unified-storage-layout.md  2026-04-17-note-checkbox.md  2026-04-21-import-workspace-metadata-display.md  2026-04-21-sync-on-close.md  2026-04-22-security-sync-crypto.md  2026-04-22-workspace-constructor-refactor.md  2026-04-23-per-op-verification.md  (+6 more)
docs/swarm/: KrillNotes_Relay_Design_Concept.md  Permission_Gate_Spec_v1_0.md  Swarm_ACL_Spec_v1_0.md  Swarm_RBAC_Spec_v2_0.md  api.md
example-scripts/book-collection/: book-collection.krillnotes  book-collection.rhai  book-collection.schema.rhai
example-scripts/contacts/: contacts.krillnotes  contacts.rhai
example-scripts/photo-note/: photo-note.rhai
example-scripts/product-inventory/: product.rhai  product.schema.rhai
example-scripts/project/: project.krillnotes  project.rhai  project.schema.rhai
example-scripts/recipe/: recipe.krillnotes  recipe.rhai  recipe.schema.rhai
example-scripts/travel-planner/: travel-planner.krillnotes  travel-planner.rhai  travel-planner.schema.rhai
example-scripts/zettelkasten/: zettelkasten.krillnotes  zettelkasten.rhai  zettelkasten.schema.rhai
krillnotes-core/: Cargo.toml
krillnotes-core/src/: lib.rs
krillnotes-core/src/core/: accepted_invite.rs  accepted_invite_tests.rs  attachment.rs  contact.rs  delete.rs  device.rs  error.rs  export.rs  export_tests.rs  hlc.rs  identity.rs  identity_tests.rs  invite.rs  mod.rs  note.rs  operation.rs  operation_log.rs  operation_tests.rs  peer_registry.rs  permission.rs  received_response.rs  received_response_tests.rs  save_transaction.rs  schema.sql  scripting.rs  storage.rs  storage_tests.rs  timestamp.rs  undo.rs  user_script.rs  workspace.rs  workspace_sync.rs
krillnotes-core/src/core/scripting/: display_helpers.rs  engine.rs  hooks.rs  mod.rs  schema.rs  tests.rs
krillnotes-core/src/core/swarm/: crypto.rs  delta.rs  header.rs  invite.rs  mod.rs  signature.rs  snapshot.rs  sync.rs
krillnotes-core/src/core/sync/: channel.rs  folder.rs  manual.rs  mod.rs  receive_poll.rs  receive_poll_tests.rs
krillnotes-core/src/core/sync/relay/: auth.rs  client.rs  mod.rs  relay_account.rs
krillnotes-core/src/core/workspace/: attachments.rs  hooks.rs  mod.rs  notes.rs  permissions.rs  scripts.rs  sync.rs  sync_events.rs  tests.rs  undo.rs
krillnotes-core/src/system_scripts/: 00_text_note.rhai  00_text_note.schema.rhai  01_contact.rhai  01_contact.schema.rhai  01_todo_item.schema.rhai  02_task.rhai  02_task.schema.rhai  03_project.rhai  03_project.schema.rhai  04_book.rhai  05_recipe.rhai  05_recipe.schema.rhai  06_product.rhai  06_product.schema.rhai  contact.rhai  text_note.rhai
krillnotes-core/tests/: relay_integration.rs  watermark_recovery.rs
krillnotes-desktop/: README.md  package-lock.json  package.json  vite.config.ts
krillnotes-desktop/src/: App.tsx  main.tsx  types.ts
krillnotes-desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
krillnotes-desktop/src-tauri/capabilities/: default.json
krillnotes-desktop/src-tauri/icons/: icon.icns
krillnotes-desktop/src-tauri/src/: lib.rs  locales.rs  main.rs  menu.rs  settings.rs  themes.rs
krillnotes-desktop/src-tauri/src/commands/: accepted_invites.rs  attachments.rs  contacts.rs  identity.rs  invites.rs  mod.rs  notes.rs  permissions.rs  receive_poll.rs  relay_accounts.rs  scripting.rs  scripts.rs  swarm.rs  sync.rs  workspace.rs
krillnotes-rbac/: Cargo.toml
krillnotes-rbac/src/: gate.rs  lib.rs  queries.rs  resolver.rs  schema.sql
krillnotes-rbac/src/tests/: gate_tests.rs  integration_tests.rs  mod.rs  query_tests.rs  resolver_tests.rs
src/core/: device.rs  error.rs  mod.rs  operation_log.rs  scripting.rs  storage.rs  workspace.rs
src/ui/: app.rs  menu.rs  mod.rs
system_scripts/: text_note.rhai
templates/: book_collection.rhai  book_collection.schema.rhai  photo_note.rhai  photo_note.schema.rhai  zettelkasten.rhai  zettelkasten.schema.rhai
user_scripts/: book.rhai  contact.rhai  product.rhai  project.rhai  recipe.rhai  task.rhai
(+108 files in other folders)
