[package]
name = "krillnotes"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.13"
iced_aw = { version = "0.10", default-features = false, features = ["menu"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rhai = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
mac_address = "1.1"

[dev-dependencies]
tempfile = "3.8"
