[workspace]
members = ["krillnotes-core", "krillnotes-desktop/src-tauri"]
resolver = "2"

[workspace.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
rhai = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[workspace.dependencies.iced]
version = "0.13"
features = []

[workspace.dependencies.iced_aw]
version = "0.10"
features = ["menu"]
