[workspace]
members = ["krillnotes-core", "krillnotes-desktop/src-tauri"]
resolver = "2"

[workspace.dependencies]
rusqlite = { version = "0.38", features = ["bundled-sqlcipher-vendored-openssl"] }
rhai = { version = "1.24", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

