[package]
name = "krillnotes-core"
version = "0.2.2"
edition = "2021"
authors = ["Your Name"]
description = "Core library for Krillnotes - local-first note-taking"
license = "MIT"

[dependencies]
rusqlite = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
mac_address = "1.1"
include_dir = "0.7"
zip = { version = "8", default-features = false, features = ["deflate", "aes-crypto"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
regex = "1"
base64 = "0.22"

# Encryption
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
