[package]
name = "krillnotes-core"
version = "0.2.5"
edition = "2021"
authors = ["TripleACS Pty Ltd t/a 2pi Software <info@2pisoftware.com>"]
description = "Core library for Krill Notes — a local-first, schema-driven note-taking application"
license = "MPL-2.0"
repository = "https://github.com/2pisoftware/krillnotes"
homepage = "https://krillnotes.org"

[dependencies]
rusqlite = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
mac_address = "1.1"
include_dir = "0.7"
zip = { version = "8", default-features = false, features = ["deflate", "aes-crypto"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
regex = "1"
base64 = "0.22"
blake3 = "1"

# Encryption
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
argon2 = "0.5"
aes-gcm = "0.10"

[dev-dependencies]
tempfile = "3.8"
