[package]
name = "krillnotes-rbac"
version = "1.0.0"
edition = "2021"

[dependencies]
krillnotes-core = { path = "../krillnotes-core" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
tempfile = "3.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
