[package]
name = "krillnotes-desktop"
version = "0.2.5"
description = "Krill Notes desktop application (Tauri)"
authors = ["TripleACS Pty Ltd t/a 2pi Software <info@2pisoftware.com>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/2pisoftware/krillnotes"
homepage = "https://krillnotes.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "krillnotes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.0"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
log = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
krillnotes-core = { path = "../../krillnotes-core", features = ["relay"] }
krillnotes-rbac = { path = "../../krillnotes-rbac" }
mimalloc = { version = "0.1", default-features = false }
dirs = "6"
mime_guess = "2"
base64 = "0.22"
hex = "0.4"
tokio = { version = "1", features = ["rt"] }
rand = "0.8"
tempfile = "3"
uuid = { workspace = true }
chrono = { workspace = true }
zip = { version = "8", default-features = false }

[dev-dependencies]
